--- a/lottery-system/src/main/resources/static/create-prizes.html
+++ b/lottery-system/src/main/resources/static/create-prizes.html
@@ -176,7 +176,7 @@
                 if(result.code == 200) {
                     
                     alert('奖品创建成功！');
-                    
+                    location.assign("prize-list.html");
                 } else {
                     alert('创建奖品失败：' + result.msg);
                 }
